# internal/handler/user/error_mapper.go
@@ -13,15 +13,13 @@ func mapError(err error) (int, handler.ErrorDetail) {
 	case errors.Is(err, auth.ErrUserNotFound):
 		return http.StatusNotFound, handler.ErrorDetail{
 			Code:        "USER_NOT_FOUND",
-			Message:     "user not found",
+			Message:     err.Error(),
 			UserMessage: "User not found",
-			Type:        handler.ErrorTypeUser,
 		}
 	default:
 		return http.StatusInternalServerError, handler.ErrorDetail{
 			Code:    "INTERNAL_ERROR",
-			Message: "internal server error",
-			Type:    handler.ErrorTypeSystem,
+			Message: err.Error(),
 		}
 	}
 }
